--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pathspec==0.12.1
+patsy==1.0.1
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
@@ -50,6 +51,7 @@ scipy==1.15.0
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+statsmodels==0.14.4
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tomlkit==0.13.2
