--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ appnope==0.1.4
 astroid==3.3.8
 asttokens==3.0.0
 black==24.10.0
+category-encoders==2.8.0
 click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
+cramjam==2.9.1
 cycler==0.12.1
 debugpy==1.8.11
 decorator==5.1.1
 dill==0.3.9
 executing==2.1.0
+fastparquet==2024.11.0
 fonttools==4.55.3
+fsspec==2024.12.0
 invoke==2.2.0
 ipykernel==6.29.5
 ipython==8.31.0
@@ -39,6 +43,7 @@ prompt-toolkit==3.0.48
 psutil==6.1.1
 ptyprocess==0.7.0
 pure-eval==0.2.3
+pyarrow==18.1.0
 pygments==2.19.1
 pylint==3.3.3
 pyparsing==3.2.1
