--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,21 @@ dependencies = [ # Main dependency
     "invoke>=2.2.0",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
+    "nbformat>=5.10.4",
     "numpy>=2.2.1",
     "pandas>=2.2.3",
     "plotly>=5.24.1",
     "pyarrow>=18.1.0",
+    "pykan>=0.2.8",
     "pylint>=3.3.3",
+    "pyyaml>=6.0.2",
     "ruff>=0.9.0",
     "scikit-learn>=1.6.0",
     "scipy>=1.15.0",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
+    "torch>=2.5.1",
+    "tqdm>=4.67.1",
 ]
 
 [dependency-groups] # Development dependency
