--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==5.1.1
 dill==0.3.9
 executing==2.1.0
 fastparquet==2024.11.0
+filelock==3.17.0
 fonttools==4.55.3
 fsspec==2024.12.0
 invoke==2.2.0
@@ -20,15 +21,19 @@ ipykernel==6.29.5
 ipython==8.31.0
 isort==5.13.2
 jedi==0.19.2
+jinja2==3.1.5
 joblib==1.4.2
 jupyter-client==8.6.3
 jupyter-core==5.7.2
 kiwisolver==1.4.8
+markupsafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mpmath==1.3.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
@@ -45,22 +50,29 @@ ptyprocess==0.7.0
 pure-eval==0.2.3
 pyarrow==18.1.0
 pygments==2.19.1
+pykan==0.2.8
 pylint==3.3.3
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pyyaml==6.0.2
 pyzmq==26.2.0
 ruff==0.9.0
 scikit-learn==1.6.1
 scipy==1.15.0
 seaborn==0.13.2
+setuptools==75.8.0
 six==1.17.0
 stack-data==0.6.3
 statsmodels==0.14.4
+sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tomlkit==0.13.2
+torch==2.5.1
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
+typing-extensions==4.12.2
 tzdata==2024.2
 wcwidth==0.2.13
