--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,75 @@
+alembic==1.14.0
 appnope==0.1.4
 astroid==3.3.8
 asttokens==3.0.0
+attrs==25.1.0
 black==24.10.0
+blinker==1.9.0
+cachetools==5.5.0
 category-encoders==2.8.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
+cloudpickle==3.1.0
+colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
 cramjam==2.9.1
 cycler==0.12.1
+databricks-sdk==0.40.0
 debugpy==1.8.11
 decorator==5.1.1
-dill==0.3.9
+deprecated==1.2.15
+dill==0.3.7
+docker==7.1.0
 executing==2.1.0
+fastjsonschema==2.21.1
 fastparquet==2024.11.0
 filelock==3.17.0
+flask==3.1.0
 fonttools==4.55.3
 fsspec==2024.12.0
+gitdb==4.0.12
+gitpython==3.1.44
+google-auth==2.37.0
+graphene==3.4.3
+graphql-core==3.2.5
+graphql-relay==3.2.0
+gunicorn==23.0.0
+idna==3.10
+importlib-metadata==8.5.0
+iniconfig==2.0.0
 invoke==2.2.0
 ipykernel==6.29.5
 ipython==8.31.0
 isort==5.13.2
+itsdangerous==2.2.0
 jedi==0.19.2
 jinja2==3.1.5
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter-client==8.6.3
 jupyter-core==5.7.2
 kiwisolver==1.4.8
+mako==1.3.8
+markdown==3.7
 markupsafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mlflow==2.19.0
+mlflow-skinny==2.19.0
 mpmath==1.3.0
 mypy-extensions==1.0.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.2.1
+opentelemetry-api==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+optuna==4.2.0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -44,25 +79,37 @@ pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
 plotly==5.24.1
+pluggy==1.5.0
 prompt-toolkit==3.0.48
+protobuf==5.29.3
 psutil==6.1.1
 ptyprocess==0.7.0
 pure-eval==0.2.3
 pyarrow==18.1.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
 pygments==2.19.1
 pykan==0.2.8
 pylint==3.3.3
 pyparsing==3.2.1
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyyaml==6.0.2
 pyzmq==26.2.0
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.22.3
+rsa==4.9
 ruff==0.9.0
 scikit-learn==1.6.1
 scipy==1.15.0
 seaborn==0.13.2
 setuptools==75.8.0
 six==1.17.0
+smmap==5.0.2
+sqlalchemy==2.0.37
+sqlparse==0.5.3
 stack-data==0.6.3
 statsmodels==0.14.4
 sympy==1.13.1
@@ -75,4 +122,8 @@ tqdm==4.67.1
 traitlets==5.14.3
 typing-extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
 wcwidth==0.2.13
+werkzeug==3.1.3
+wrapt==1.17.0
+zipp==3.21.0
